# gpt-api

./: .env.example  Makefile  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
src/app/: Dockerfile  dependencies.py  main.py
src/app/api/v1/: __init__.py
src/app/api/v1/endpoints/: __init__.py  prompt.py
src/app/core/: config.py
src/common/environment/: config.py  enums.py
src/common/logging/: config.py  enums.py  setup.py
